Make modal dialogs fixed instead of absolute.
Using absolute positioning means that the dialogs and screen scroll with the page, making it awkward to enable the local host if there's already a long host list. Worse, since the screen height is equal to the window height, scrolling it means that the underlying UI is visible and clickable.

BUG=None
TEST=Make sure that the web-app has scrollbars and open a modal dialog. Scroll and make sure that the background UI remains hidden and unclickable.

Review URL: https://chromiumcodereview.appspot.com/10340007

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@134998 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 82de94f06f281a3cc230cd76526756d5e54a8c71

--- a/remoting/webapp/main.css
+++ b/remoting/webapp/main.css
@@ -483,7 +483,7 @@ button {
 }
 
 #dialog-container {
-  position: absolute;
+  position: fixed;
   top: 200px;
   left: 0;
   width: 100%;
@@ -491,7 +491,7 @@ button {
 }
 
 #dialog-screen {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
